# LMAO

./: .gitignore  LICENSE  README.md  dispatch_scout.sh  pyproject.toml  scout_mission.py
dashboard/: package.json  pnpm-lock.yaml
dashboard/server/: index.js
dashboard/src/: index.css  router.ts
docs/: REACT_UI_INTEGRATION.md  REFERENCE.md
local_brain/: server.py  test_qwen.py  viewer.py  visual_servo.py  yolo_panel.py
lucas_dashboard/: index.html  index.lmao.html  index.lmao_backup.html  vite.config.ts
lucas_dashboard/server/: package.json
lucas_dashboard/src/: index.css
orchestrator/: __init__.py  __main__.py  api.py  config.py  fleet_config.yaml  sim.py
orchestrator/allocator/: task_allocator.py
orchestrator/cli/: repl.py
orchestrator/comms/: connection_manager.py  local_brain_client.py
orchestrator/health/: degradation.py  fleet_monitor.py  rate_monitor.py
orchestrator/reasoner/: claude_reasoner.py  claude_reasoner_old.py  mission.py  tools.py
orchestrator/world_model/: model.py  (+2 more)
scripts/: install_symlinks.sh  record_trajectory.sh  replay_to_brain.py  stress_test_brain.py
skills/: approach_target_onboard.py  encoder_imu_odometry_check.py  hello.py  imu_odom_pub2.py  imu_test.py  imu_test2sec.py  imu_test_final.py  lidar_cross_validate.py  move_forward.py  movement_check.py  odom_fdir2.py  odom_fdir3.py  real_time_depth_anything_v3.py  sys_stats_pub.py  test_imu.py  turn_left.py  turn_right.py  view_pc_image_depth_side_by_side.py  wait_and_look.py
tests/: 02_topic_check.py  05_cmd_vel_nudge.py  06_laptop_subscribe.py  README.md
(+23 files in other folders)
